# AdvancedProgramming1

./: README.md  grades.txt
ex1/ex1/: board.cpp  board.h  main.cpp  makefile
ex2/: CMakeLists.txt  a.out  board.cpp  board.h  cell.cpp  cell.h  consoleDisplay.cpp  consoleDisplay.h  display.h  game.cpp  game.h  human.cpp  human.h  logic.cpp  logic.h  main.cpp  makefile  regLogic.cpp  regLogic.h
ex3/: board.cpp  board.h  cell.cpp  cell.h  computer.cpp  computer.h  consoleDisplay.cpp  consoleDisplay.h  display.h  game.cpp  game.h  human.cpp  human.h  logic.cpp  logic.h  main.cpp  player.cpp  player.h  point.cpp  point.h  regLogic.cpp  regLogic.h
ex3/tests/: boardTest.cpp  cellTest.cpp  logicTest.cpp  playerTest.cpp  pointTest.cpp
ex4/etc/: log.txt
ex4/exe/: client  server
ex6/etc/: info.txt  log.txt
ex7/etc/: log.txt
ex7/exe/: server
ex7/src/: tools.h
ex7/src/server/: HandleGame.cpp  Task.cpp  Task.h  ThreadPool.cpp  ThreadPool.h  commandClose.cpp  commandClose.h  commandJoin.cpp  commandJoin.h  commandsManager.cpp  commandsManager.h  server.cpp  server.h
